--- a/hw/Makefile.objs
+++ b/hw/Makefile.objs
@@ -112,6 +112,8 @@ hw-obj-$(CONFIG_LAN9118) += lan9118.o
 hw-obj-$(CONFIG_NE2000_ISA) += ne2000-isa.o
 hw-obj-$(CONFIG_OPENCORES_ETH) += opencores_eth.o
 
+#PCI VMSocket
+hw-obj-y += vmsocket.o
 # SCSI layer
 hw-obj-$(CONFIG_LSI_SCSI_PCI) += lsi53c895a.o
 hw-obj-$(CONFIG_MEGASAS_SCSI_PCI) += megasas.o
